--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -58,7 +58,16 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Projetos {{configuracao.ano}}.{{configuracao.semestre}}</h3>
+  <h3>Mapeamento de Projetos por Alunos</h3>
+
+  <label for="filter">Edição:</label>
+  <select onchange="location = this.options[this.selectedIndex].value;">
+    {% for loop in loop_anos %}
+      <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
+      <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
+    {% endfor %}
+  </select>
+
   {% if projetos %}
     <table id="MapeamentoTable">
       <tr>
