--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -7,89 +7,176 @@
 
 {% block head %}
   {% load date_extras %}
+
+  <script>
+    $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
+
+
+
 {% endblock %}
 
 {% block content %}
-  <h3>Avisos</h3><br>
+  <h3>Avisos</h3>
 
   <label for="filter">Filtro:</label>
   <select id="cxi" class="filter" data-tableId="projetos">
     <option value="todos" {% if periodo == "todos" %}selected="selected"{% endif %}>todos</option>
-    <option value="comite" {% if periodo == "comite" %}selected="selected"{% endif %}>Comitê PFE</option>
-    <option value="alunos" {% if periodo == "alunos" %}selected="selected"{% endif %}>Alunos</option>
-    <option value="orientadores" {% if periodo == "orientadores" %}selected="selected"{% endif %}>Orientadores</option>
-    <option value="organizacoes" {% if periodo == "organizacoes" %}selected="selected"{% endif %}>Organizações</option>
+    <option value="Co" {% if periodo == "Co" %}selected="selected"{% endif %}>Comitê PFE</option>
+    <option value="Al" {% if periodo == "Al" %}selected="selected"{% endif %}>Todos os Alunos</option>
+    <option value="AP" {% if periodo == "AP" %}selected="selected"{% endif %}>Alunos por Projeto</option>
+    <option value="Or" {% if periodo == "Or" %}selected="selected"{% endif %}>Todos os Orientadores</option>
+    <option value="OP" {% if periodo == "OP" %}selected="selected"{% endif %}>Orientadores por Projeto</option>
+    <option value="Or" {% if periodo == "Or" %}selected="selected"{% endif %}>Contatos nas Organizacoes</option>
   </select>
-  <br><br><br>
+  <br><br>
 
-  {% if avisos %}
-    <table>
-        <tr>
-          <th>
-            Dias
-          </th>
-          <th>
-            Data
-          </th>
-          <th>
-            Título
-          </th>
-        </tr>
-  
-      {% for a in avisos %} 
-        <tr class="{% if a.delta < dias_passados %}text-success{% else %}text-info{% endif %}"
-            data-type="XXX" >
-          <td>
-            {{a.delta}}
-          </td>
-          <td>
-            {{ configuracao.t0|plus_days:a.delta  }}
-          </td>
-          <td>
-            {{a.titulo}}
-          </td>
-        </tr>
-      {% endfor %}
-    </table>
+  <form method="post">
+    {% csrf_token %}
+    {% if avisos %}
+      <table>
+          <tr>
+            <th>
+              &#10003;
+            </th>
+            <th style="text-align:center">
+              Data
+            </th>
+            <th style="text-align:center">
+              Público
+            </th>
+            <th style="text-align:center">
+              Título
+            </th>
+          </tr>
+    
+        {% for a in avisos %} 
+          <tr class="linha {% if a.delta < dias_passados %}text-success{% else %}text-info{% endif %}"
+              data-type="
+                {% if a.comite_pfe %}Co{% endif %}
+                {% if a.todos_alunos %}Al{% endif %}
+                {% if a.aluno_p_projeto %}AP{% endif %}
+                {% if a.todos_orientadores %}Or{% endif %}
+                {% if a.orientadores_p_projeto %}OP{% endif %}
+                {% if a.contatos_nas_organizacoes %}Og{% endif %}
+              " >
+            <td>
+              <input class="aviso" type="checkbox" id="aviso{{a.id}}" name="aviso{{a.id}}" value="{{a.id}}" 
+              {% if a.realizado %}checked{% endif %}
+              >
+            </td>
+            <td data-toggle="tooltip" data-html="true" animation="true" title="delta = {{a.delta}}">
+              {{ configuracao.t0|plus_days:a.delta  }}
+            </td>
+            <td>
+              {% if a.comite_pfe %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Co</span>
+              {% endif %}
+              {% if a.todos_alunos %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Alunos">Al</span>
+              {% endif %}
+              {% if a.aluno_p_projeto %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Alunos por Projeto">AP</span>
+              {% endif %}
+              {% if a.todos_orientadores %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Orientadores">Or</span>
+              {% endif %}
+              {% if a.orientadores_p_projeto %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Orientadores por Projeto">OP</span>
+              {% endif %}
+              {% if a.contatos_nas_organizacoes %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
+              {% endif %}
+            </td>
+            <td>
+              <a href="{% url 'edita_aviso' a.id %}">
+                {{a.titulo}}
+              </a>
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+      <small>
+      Co: Comitê do PFE;
+      Al: Todos os Alunos;
+      AP: Alunos por Projeto;
+      Or: Todos os Orientadores;
+      OP: Orientadores por Projeto;
+      Og: Contatos nas Organizacoes.
+      </small>
+      <p>&nbsp;</p>
+    {% else %}
+      <p>Não existem avisos.</p>
+    {% endif %}
+    <input type='button' class="limpa" value="Limpa Tudo">
     <p>&nbsp;</p>
-  {% else %}
-    <p>Não existem avisos.</p>
-  {% endif %}
-  <p>&nbsp;</p>
 
+  </form>
+  
 
   <script type="text/javascript">
 
     function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
       var filterValue = $('.filter').val();
-      var row = $('.row'); 
+      var row = $('.linha'); 
       row.hide();
 
       row.each(function(i, el) {
-        
-        if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
+        if( filterValue == "todos" | $(el).attr('data-type').indexOf(filterValue) >= 0 ) {
             $(el).show();
         }
-
       });
 
     }
 
-    /*
-    function mostra_grafico() { // REFERENTE AO PIE CHART
-    }
-    */
-
     $(".filter").change(function(){
       filtra_data();
-      //mostra_grafico();
     });  
 
     $(document).ready(function(){
       filtra_data();
-      //mostra_grafico();
     });
   
+  </script>
+
+  <script>
+    $(".aviso").change(function () {
+      var aviso = $(this).val();
+      var checked = $(this).prop('checked');
+
+      $.ajax({
+        url: '{% url "validate_aviso" %}',
+        data: {
+          'aviso': aviso,
+          'checked': checked,
+        },
+        dataType: 'json',
+        success: function (data) {
+          if (data.atualizado) {
+            console.log("Valor atualizado.");
+          }
+        }
+      });
+    });
+
+    $('.limpa').on('click', function () {
+      $.ajax({
+        url: '{% url "validate_aviso" %}',
+        data: {
+          'aviso': 0,
+          'checked': true,
+        },
+        dataType: 'json',
+        success: function (data) {
+          if (data.atualizado) {
+            console.log("Valores atualizados.");
+            location.reload();
+          }
+        }
+      });
+    });
   </script>
 
 {% endblock %}
