Diversos Bugs de erro de referência corrigidos

--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -117,7 +117,7 @@
                 if(mensagem=="projeto") {
                     window.location='{% url 'meuprojeto' %}';
                 } else {
-                    window.location='http://www.example.com';
+                    window.location='{% url 'professor_detail' professor_id %}';
                 }   
             {% endif %}
         }
