--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -21,12 +21,12 @@
 
   <label for="filter">Filtro:</label>
   <select id="cxi" class="filter" data-tableId="projetos">
-    <option value="todos" {% if periodo == "todos" %}selected="selected"{% endif %}>todos</option>
-    <option value="Co" {% if periodo == "Co" %}selected="selected"{% endif %}>Coordenação</option>
-    <option value="Cm" {% if periodo == "Cm" %}selected="selected"{% endif %}>Comitê PFE</option>
-    <option value="Al" {% if periodo == "Al" %}selected="selected"{% endif %}>Todos os Alunos</option>
-    <option value="Or" {% if periodo == "Or" %}selected="selected"{% endif %}>Todos os Orientadores</option>
-    <option value="Og" {% if periodo == "Og" %}selected="selected"{% endif %}>Contatos nas Organizacoes</option>
+    <option value="todos" {% if filtro == "todos" %}selected="selected"{% endif %}>todos</option>
+    <option value="Co" {% if filtro == "Co" %}selected="selected"{% endif %}>Coordenação</option>
+    <option value="Cm" {% if filtro == "Cm" %}selected="selected"{% endif %}>Comitê PFE</option>
+    <option value="Al" {% if filtro == "Al" %}selected="selected"{% endif %}>Todos os Alunos</option>
+    <option value="Or" {% if filtro == "Or" %}selected="selected"{% endif %}>Todos os Orientadores</option>
+    <option value="Og" {% if filtro == "Og" %}selected="selected"{% endif %}>Contatos nas Organizacoes</option>
   </select>
   <br><br>
 
