--- a/projetos/templates/projetos/calendario.html
+++ b/projetos/templates/projetos/calendario.html
@@ -458,11 +458,11 @@
       
       customDayRenderer: function(element, date) {
           $(element).css('border-radius', '0px');
-          {% if not limpo %}
+          {% comment %}{% if not limpo %}{% endcomment %}
             if(date.getTime() == hoje) {
               $(element).css('outline', '2px solid blue');
             }
-          {% endif %}
+          {% comment %}{% endif %}{% endcomment %}
           if (date.getDay() === 6 || date.getDay() === 0) {
             $(element).css('background-color', 'lightgrey');  
           } else {
