--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -26,6 +26,6 @@
 <form action="{% url 'password_change' %}">
   <input type="submit" value="Atualizar Senha" />
 </form>
-<!-- <li>Location: {{ user.profile.location }}</li> -->
-<!-- <li>Birth Date: {{ user.profile.birth_date }}</li> -->
+{% comment %}<li>Location: {{ user.profile.location }}</li>{% endcomment %}
+{% comment %}<li>Birth Date: {{ user.profile.birth_date }}</li>{% endcomment %}
 {% endblock %}
