--- a/projetos/templates/projetos/emails.html
+++ b/projetos/templates/projetos/emails.html
@@ -47,7 +47,7 @@
     <a href="
       mailto:{% for membro in membros_comite %}{{membro.first_name|parse_quote}}%20{{membro.last_name|parse_quote}}%20&lt;{{membro.email|parse_quote}}&gt;,{% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
-      &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20membros%20do%20comitê%20do%20PFE,%0D%0A%0D%0A
+      &amp;subject=PFE%20Comitê&amp;body=Caros%20membros%20do%20comitê%20do%20PFE,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Comitê do PFE</a><br>
     <br>
@@ -143,8 +143,8 @@
     <a href="
       mailto:{% for aluno in todos_alunos %}{{aluno.user.first_name|parse_quote}}%20{{aluno.user.last_name|parse_quote}}%20&lt;{{ aluno.user.email|parse_quote }}&gt;,{% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
-      &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
-      &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20alunos,%0D%0A%0D%0A
+      &amp;bcc=ComitePFE&lt;comitepfe@insper.edu.br&gt;
+      &amp;subject=PFE%20&amp;body=Caros%20alunos,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os alunos do PFE</a><br>
   {% endif %}
@@ -154,7 +154,7 @@
       mailto:{% for professor in todos_professores %}{{professor.user.first_name|parse_quote}}%20{{professor.user.last_name|parse_quote}}%20&lt;{{ professor.user.email|parse_quote }}&gt;,{% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
       &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
-      &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20professores%20do%PFE,%0D%0A%0D%0A
+      &amp;subject=PFE&amp;body=Caros%20professores%20do%PFE,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os professores do PFE</a><br>
   {% endif %}
@@ -164,7 +164,7 @@
       mailto:{% for parceiro in todos_parceiros %}{{parceiro.user.first_name|parse_quote}}%20{{parceiro.user.last_name|parse_quote}}%20&lt;{{ parceiro.user.email|parse_quote }}&gt;,{% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
       &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
-      &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20parceiro%20do%PFE,%0D%0A%0D%0A
+      &amp;subject=PFE&amp;body=Caros%20parceiro%20do%PFE,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os parceiros do PFE</a><br>
   {% endif %}
