--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -52,29 +52,31 @@
       {% endfor %}
     </ul>
   
-    <!-- <script type="text/javascript">
-      $(".filter").change(function() {
-        var filterValue = $(this).val();
-        var row = $('.row'); 
-        row.hide()
-        var count_projects = 0
-        var count_alunos = 0
-        row.each(function(i, el) {
-             if($(el).attr('data-type') == filterValue) {
-                 $(el).show();
-                 count_projects = count_projects + 1
-                 count_alunos = count_alunos + $(el).find("TD").find("OL").children().length;
-             }
+    {% comment %}
+      <script type="text/javascript">
+        $(".filter").change(function() {
+          var filterValue = $(this).val();
+          var row = $('.row'); 
+          row.hide()
+          var count_projects = 0
+          var count_alunos = 0
+          row.each(function(i, el) {
+              if($(el).attr('data-type') == filterValue) {
+                  $(el).show();
+                  count_projects = count_projects + 1
+                  count_alunos = count_alunos + $(el).find("TD").find("OL").children().length;
+              }
+          });
+          if ("todas" == filterValue) {
+            count_projects = {{ length }}
+            count_alunos = {{ nalunos }}
+            row.show();
+          }
+          document.getElementById("myCountProj").innerHTML = count_projects;
+          document.getElementById("myCountAlun").innerHTML = count_alunos
         });
-        if ("todas" == filterValue) {
-          count_projects = {{ length }}
-          count_alunos = {{ nalunos }}
-          row.show();
-        }
-        document.getElementById("myCountProj").innerHTML = count_projects;
-        document.getElementById("myCountAlun").innerHTML = count_alunos
-      });
-    </script> -->
+      </script>
+    {% endcomment %}
 
   {% else %}
       <p>Não existem projetos disponíveis.</p>
