--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -24,7 +24,7 @@
         <p style="color: red;">
             - NÃO ATIVO -
         </p>
-    {% endif %}>
+    {% endif %}
     {% if parceiro.cargo %}
         <strong>cargo:</strong> {{parceiro.cargo}}<br>
     {% endif %}
