--- a/projetos/templates/projetos/bancas_tabela.html
+++ b/projetos/templates/projetos/bancas_tabela.html
@@ -36,6 +36,10 @@
                 <a href="{% url 'parceiro_detail' membro.parceiro.id %}">
                   {{membro.get_full_name}}
                 </a>
+              {% elif membro.tipo_de_usuario == 4 %}
+                <a href="{% url 'professor_detail' membro.professor.id %}">
+                  {{membro.get_full_name}}
+                </a>
               {% endif %}  
             </td>
             <td class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="
