--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -6,7 +6,8 @@
 {% endcomment %}
 
 {% block head %}
-  {% load date_extras %}
+  {% comment %}{% load date_extras %}{% endcomment %}
+  {% load class_tag %}
 
   <script>
     $(document).ready(function(){
@@ -27,6 +28,7 @@
     <option value="Al" {% if filtro == "Al" %}selected="selected"{% endif %}>Todos os Alunos</option>
     <option value="Or" {% if filtro == "Or" %}selected="selected"{% endif %}>Todos os Orientadores</option>
     <option value="Og" {% if filtro == "Og" %}selected="selected"{% endif %}>Contatos nas Organizacoes</option>
+    <option value="Ev" {% if filtro == "Ev" %}selected="selected"{% endif %}>Evento</option>
   </select>
   <br><br>
 
@@ -50,53 +52,77 @@
           </tr>
     
         {% for a in avisos %} 
-          <tr class="linha {% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}"
-              data-type="
-                {% if a.coordenacao %}Co{% endif %}
-                {% if a.comite_pfe %}Cm{% endif %}
-                {% if a.todos_alunos %}Al{% endif %}
-                {% if a.todos_orientadores %}Or{% endif %}
-                {% if a.contatos_nas_organizacoes %}Og{% endif %}
-              " >
-            <td>
-              <input class="aviso" type="checkbox" id="aviso{{a.id}}" name="aviso{{a.id}}" value="{{a.id}}" 
-              {% if a.realizado %}checked{% endif %}
-              {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
-              >
-            </td>
-            <td data-toggle="tooltip" data-html="true" animation="true" title="
-                {% if a.tipo_de_evento %}
-                  {{a.get_evento}}{%if a.delta >= 0 %}+{%endif%}{{a.delta}}
-                {% else %}
-                  delta={{a.delta}}
+          {% if a|get_class == "Aviso" %}
+            <tr class="linha {% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}"
+                data-type="
+                  {% if a.coordenacao %}Co{% endif %}
+                  {% if a.comite_pfe %}Cm{% endif %}
+                  {% if a.todos_alunos %}Al{% endif %}
+                  {% if a.todos_orientadores %}Or{% endif %}
+                  {% if a.contatos_nas_organizacoes %}Og{% endif %}
+                " >
+              <td>
+                <input class="aviso" type="checkbox" id="aviso{{a.id}}" name="aviso{{a.id}}" value="{{a.id}}" 
+                {% if a.realizado %}checked{% endif %}
+                {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
+                >
+              </td>
+              <td data-toggle="tooltip" data-html="true" animation="true" title="
+                  {% if a.tipo_de_evento %}
+                    {{a.get_evento}}{%if a.delta >= 0 %}+{%endif%}{{a.delta}}
+                  {% else %}
+                    delta={{a.delta}}
+                  {% endif %}
+                ">
+                {% comment %}{{ configuracao.t0|plus_days:a.delta  }}{% endcomment %}
+                {{a.get_data}}
+              </td>
+              <td>
+                {% if a.coordenacao %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
                 {% endif %}
-              ">
-              {% comment %}{{ configuracao.t0|plus_days:a.delta  }}{% endcomment %}
-              {{a.get_data}}
-            </td>
-            <td>
-              {% if a.coordenacao %}
-                <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
-              {% endif %}
-              {% if a.comite_pfe %}
-                <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Cm</span>
-              {% endif %}
-              {% if a.todos_alunos %}
-                <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Alunos">Al</span>
-              {% endif %}
-              {% if a.todos_orientadores %}
-                <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Orientadores">Or</span>
-              {% endif %}
-              {% if a.contatos_nas_organizacoes %}
-                <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
-              {% endif %}
-            </td>
-            <td>
-              <a href="{% url 'edita_aviso' a.id %}">
-                {{a.titulo}}
-              </a>
-            </td>
-          </tr>
+                {% if a.comite_pfe %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Cm</span>
+                {% endif %}
+                {% if a.todos_alunos %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Alunos">Al</span>
+                {% endif %}
+                {% if a.todos_orientadores %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Orientadores">Or</span>
+                {% endif %}
+                {% if a.contatos_nas_organizacoes %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
+                {% endif %}
+              </td>
+              <td>
+                <a href="{% url 'edita_aviso' a.id %}">
+                  {{a.titulo}}
+                </a>
+              </td>
+            </tr>
+          {% endif %}
+          {% if a|get_class == "Evento" %}
+            <tr class="linha" data-type="
+                  {% if a.tipo_de_evento < 100 %}Al{% else %}Co{% endif %}
+                  Ev">
+              <td>
+              </td>
+              <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+                {{a.get_data}}
+              </td>
+              <td class="{% if a.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+                {% if a.tipo_de_evento < 100 %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Todos os Alunos">Al</span>
+                {% else %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
+                {% endif %}
+              </td>
+              <td style="background-color:{{a.get_color}}">
+                {{a.get_title}}
+              </td>
+            </tr>
+
+          {% endif %}
         {% endfor %}
       </table>
       <small>
